CHANGELOG 17 January 2008 Scott Cytacki
1. Added eclipse project files.  Forced the eclipse project to use java 1.4

2. Changed the eclipse project to store built files in eclipse-lib because lib was already
   being used.

3. Added eclipse code formating configuration files. They should match follow the turbine 
coding standards which have been used in this project: http://turbine.apache.org/common/code-standards.html
Also this includes a minor formating clean up of JmDNS class.

4. Changed Logger.getLogger parameter to use class.getName instead of class.toString. This is because
 class.toString returns for example "class javax.jmdns.JmDNS" while class.getName returns "javax.jmdns.JmDNS".
 The "class " messes up the logging hierarchical structure.  This javadoc specifices the string should be 
 dot separated: http://java.sun.com/j2se/1.5.0/docs/api/java/util/logging/Logger.html#getLogger(java.lang.String).
 Also this post to the mailing list talks about this issue:
 http://sourceforge.net/mailarchive/forum.php?thread_name=1196195175.2703.4.camel%40moya.kivasystems.com&forum_name=jmdns-discuss
 In that case getCanonicalName was used but that is only in Java 1.5 and basically does the same thing
 for normal classes. 

 
CHANGELOG 16 July 2005  Rick Blair

1. Added Apache License Version 2.0

2. Added shutdown fix as identifed by Scott Lewis

3. Added copyright notice.

4. General code cleanup.


CHANGELOG  30 November 2004 rawcoder

1. IPv6 support

   - RFE 890432: IPv6 support implemented

2. Logging

   - Logging is done using the Java Logger API now

3. Bug fixes

   - JmDNS reannounces services after their TTL has timed out.

4. Plattform dependency

   - Due to the changes done for IPv6 support and the logging, 
     JmDNS requires now a JVM supporting a J2SE 1.4 API.


CHANGELOG  6 June 2004 rawcoder

1. General API Changes

   - RFE 868432: Changed listener API to comply with the commonly used
                 EventListener/EventObject idiom 